--- a/src/App.module.css
+++ b/src/App.module.css
@@ -10,15 +10,128 @@
   margin: auto;
 }
 
+.content-wrapper {
+  margin: 0 auto;
+  display: flex;
+  gap: 24px;
+  max-width: 872px;
+}
+
 .filter-wrapper {
-  max-width: 288px;
-  padding: 24px 18px;
   border-radius: 6px;
-  box-shadow: 0px 1px 2px 1px rgba(190, 190, 192, 0.301);
+  padding-bottom: 12px;
+  filter: drop-shadow(0px 0px 3px rgba(190, 190, 192, 0.699));
   background-color: #fff;
 }
 
 .filter-headers {
+  padding: 24px 16px;
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 700;
+}
+
+.currency-switcher {
+  display: flex;
+  justify-content: stretch;
+  padding: 0 16px 24px;
+}
+
+.currency {
+  display: block;
+  padding: 16px 24px;
+  background-color: #fff;
+  border: 1px solid #d7d9da;
+  font-size: 16px;
+  font-weight: 700;
+  color: #2196f3;
+  cursor: pointer;
+}
+
+.currency:hover {
+  background-color: #f2fcff;
+  border: 1px solid #d7d9da;
+  border-color: #2196f3;
+}
+
+.currency:active {
+  background-color: #2196f3;
+  border-color: #2196f3;
+  color: #fff;
+}
+
+.currency-usd {
+  border-left: 1px solid #fff;
+  border-right: 1px solid #fff;
+}
+
+.currency-rur {
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
+}
+
+.currency-rur:hover {
+  border-right: 1px solid #2196f3;
+}
+
+.currency-eur {
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
+}
+
+.checkbox-wrapper {
+  display: flex;
+  position: relative;
+  width: 100%;
+  align-items: center;
+  padding: 12px 16px 12px 56px;
+  cursor: pointer;
+}
+
+.checkbox-wrapper:hover {
+  background-color: #f1fcff;
+}
+
+.checkbox-wrapper .checkbox:checked ~ .checkmark {
+  background-color: #f1fcff;
+  border-color: #2196f3;
+}
+
+.checkbox {
+  display: none;
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+.checkmark {
+  position: absolute;
+  top: 6px;
+  left: 16px;
+  height: 28px;
+  width: 28px;
+  border: 1px solid #d7d9da;
+  border-radius: 6px;
+}
+
+.checkmark:after {
+  content: '';
+  position: absolute;
+  display: block;
+  opacity: 0;
+  transition: opacity 0.15s ease;
+}
+
+.checkbox:checked + .checkmark:after {
+  display: block;
+  left: 10px;
+  top: 5px;
+  width: 8px;
+  height: 12px;
+  border: solid #2196f3;
+  border-width: 0 3px 3px 0;
+  border-radius: 2px;
+  transform: rotate(45deg);
+  opacity: 1;
 }
