--- a/src/index.css
+++ b/src/index.css
@@ -14,4 +14,9 @@ body {
   background-color: #f3f7fa;
   color: #595959;
   font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+}
+
+button {
+  font-family: 'Roboto', sans-serif;
 }
