--- a/src/App.module.css
+++ b/src/App.module.css
@@ -10,9 +10,10 @@
 }
 
 .content-wrapper {
+  max-width: 940px;
   margin: 0 auto;
   display: flex;
   align-items: flex-start;
-  justify-content: center;
+  justify-content: space-between;
   gap: 24px;
 }
