--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -1,4 +1,5 @@
 .price {
+  min-width: 178px;
   font-size: 16px;
   line-height: 1.5em;
   padding: 8px 48px;
@@ -7,4 +8,5 @@
   color: #fff;
   font-weight: 500;
   filter: drop-shadow(0px 1px 3px rgba(156, 156, 156, 0.699));
+  cursor: pointer;
 }
