--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -1,10 +1,10 @@
 .price {
   min-width: 178px;
   font-size: 16px;
-  line-height: 1.5em;
+  line-height: 1.5;
   padding: 8px 48px;
   border-radius: 8px;
-  background-color: #ff6d00;
+  background-color: var(--primary);
   color: #fff;
   font-weight: 500;
   filter: drop-shadow(0px 1px 3px rgba(156, 156, 156, 0.699));
